Fixed responsiveness on small screens (added id to logout button).

--- a/src/index.css
+++ b/src/index.css
@@ -119,7 +119,6 @@ nav a.active
 {
     nav ul
     {
-        flex-direction: column;
         align-items: center;
         gap: 12px;
     }
@@ -174,13 +173,15 @@ main
     align-items: center;
 }
 
-.top-right-auth
-{
-    position: absolute;
-    top: 15px;
-    right: 25px;
+.top-right-auth {
+    position: relative;
+    width: 100%;
     display: flex;
-    gap: 20px;
+    justify-content: flex-end;
+    align-items: center;
+    padding: 0 20px;
+    gap: 12px;
+    margin-bottom: 12px;
 }
 
 .auth-link
@@ -188,6 +189,12 @@ main
     color: #1B885E;
     font-weight: bold;
     text-decoration: none;
+}
+
+#logout_button
+{
+    width: 100px;
+    border: none;
 }
 
 .auth-link:hover
